<resources>
    <string name="app_name">PopularMovies</string>

    <string name="popular">Popular</string>
    <string name="top_rated">Top</string>
    <string name="favourite">Favourite</string>

    <string name="no_internet_connection">No internet connection</string>

    <string name="release_date">Release Date</string>
    <string name="vote_average">Vote Average</string>
    <string name="overview">Overview</string>
    <string name="synopsis">Synopsis</string>
    <string name="name">Name</string>
    <string name="action_setting">Settings</string>
    <string name="trailer">Trailers</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>


</resources>
