<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/popular"
        android:title="@string/popular"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/topRated"
        android:title="@string/top_rated"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favourite"
        android:title="Favourite"
        android:visible="true"
        app:showAsAction="ifRoom" />
    //android:icon="@drawable/favourite"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_setting" />
</menu>